src/objects/Bid__c.object
<CustomObject>
    <fields>
        <fullName>Above_Asking__c</fullName>
        <formula>( Offered_Price__c - Piece__r.Asking_Price__c)/Piece__r.Asking_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Above Asking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Buyer_State__c</fullName>
        <formula>Buyer__r.ShippingState</formula>
        <label>Buyer State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Buyer who owns this bid</description>
        <label>Buyer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Buyer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offered_Price__c</fullName>
        <label>Offered Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Piece__c</fullName>
        <label>Piece</label>
        <referenceTo>Piece__c</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Bid</label>
    <nameField>
        <label>Bid Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>